Fix projects not showing up on mobile

--- a/src/components/Projects/Project/Project.scss
+++ b/src/components/Projects/Project/Project.scss
@@ -85,6 +85,7 @@
   }
 }
 
+
 @media only screen and (min-width: 601px) {
   .card-style:hover {
     cursor: pointer;
@@ -119,9 +120,5 @@
   }
   .card-style:hover::after {
     opacity: 1;
-  }
-
-  .card-style {
-    padding-bottom: 1.5em;
   }
 }
